# fenrir

./: CMakeLists.txt  LICENSE  README  tmake.lua
include/: CMakeLists.txt  CompilerGCC.hpp  CompilerMSVC.hpp  Debug.hpp  EventManager.hpp  IResource.hpp  LuaResource.hpp  LuaState.hpp  LuaValue.hpp  compiler.hpp  string.hpp
res/: res.lua
src/: CMakeLists.txt  EventManager.cpp  LuaResource.cpp  LuaState.cpp  LuaValue.cpp  fenrir.cpp  string.cpp
